# feilong

./: .gitignore  .readthedocs.yaml  .whitesource  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  MAINTAINERS.txt  MANIFEST.in  README.md  README.rst  buildzvmsdk  database_migration_md5_to_sha256.py  fvt-requirements.txt  groups  imgimport  manifest.xml.template  project.config  requirements.txt  setup-script  setup.cfg  setup.py  test-requirements.txt  tox.ini  zvmsdk.spec
api/: deploy.py  handler.py  microversion.py  requestlog.py  util.py  wsgi.py  wsgi_wrapper.py
cli/: cli.py
data/: sdkserver.service  setupDisk  sudoers-zvmsdk  uwsgi-zvmsdk.conf  zvmsdk-wsgi.service  zvmsdk.conf
dco_signoffs/: past_dco_signoffs.txt
etc/: zvmsdk.conf  zvmsdk.conf.sample
feilong_meetings/: 20190905-meeting_notes.md  20190919-meeting_notes.md  20191003-meeting_notes.md  20191017-meeting_notes.md  20191031-meeting_notes.md  20191114-meeting_notes.md  20191212-meeting_notes.md  20200109-meeting_notes.md  20200206-meeting-notes.md  20200206-meeting_notes.md  20200220-meeting_notes.md  20200305-meeting_notes.md  20200319-meeting_notes.md  20200402-meeting_notes.md  20200416-meeting_notes.md  20200430-meeting_notes.md  20200514-meeting_notes.md  20200528-meeting_notes.md  20200806-meeting_notes.md  20200903-meeting_notes.md  20200917-meeting_notes.md  20201001-meeting_notes.md  20201015-meeting_notes.md  20201112-meeting_notes.md  20201210-meeting_notes.md  20210107-meeting_notes.md  Feilong-s390x_Infrastructure.drawio  meeting_notes_template.md
scale_test/: create.py  (+2 more)
(+988 files in other folders)
