[metadata]
name = python-zvm-sdk
author = IBM
license = ASL 2.0
summary = z/VM system management tool kit in python
description-file = README.md
home-page = https://github.com/mfcloud/python-zvm-sdk
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    zvmsdk
