[metadata]
name = python-zvm-sdk
version = 0.2.0
author = IBM
license = ASL 2.0
summary = z/VM system management tool kit in python
description-file = README.md
home-page = https://github.com/mfcloud/python-zvm-sdk
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[options]
packages = find:
setup_requires = setuptools>=30.3.0
install_requries = six

[options.packages.find]
exclude = zvmsdk.tests*

[entry_points]
wsgi_scripts =
     sdk_api = zvmsdk.sdkwsgi.wsgi:init_application
